# serialtool

./: CMakeLists.txt  Dockerfile  README.md  start.sh
src/: console.cpp  console.h  helper.hpp  main.cpp  serial.cpp  serial.h
